style: change contact page forms to 3-column grid without photos

--- a/contact.html
+++ b/contact.html
@@ -107,63 +107,47 @@
             <h2 class="course-title">ご用件に合わせてフォームをお選びください</h2>
             <p style="text-align: center; margin-bottom: 40px;">※お急ぎの場合は、お電話（029-887-0013）にてお問い合わせください。</p>
 
-            <div class="audience-section" style="flex-direction: column; align-items: center; gap: 30px;">
+            <div class="audience-section" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
 
                 <!-- Card 1 -->
                 <a href="contact_admission.html" class="audience-card-large"
-                    style="text-decoration: none; display: flex; max-width: 800px; width: 100%; transition: transform 0.2s;">
-                    <div class="card-image-wrapper" style="width: 30%;">
-                        <div class="image-placeholder" style="height: 100%;">ここに写真を入れるイメージ</div>
-                    </div>
-                    <div class="card-content-wrapper"
-                        style="width: 70%; display: flex; flex-direction: column; justify-content: center;">
-                        <h3 class="audience-title-large" style="color: #333; margin-bottom: 15px;">受験生専用フォーム</h3>
-                        <p class="audience-description" style="color: #666;">
-                            入試関係、オープンスクール、個別相談、学校案内資料請求など、中学・受験生およびその保護者様からのお問い合わせはこちら。</p>
-                        <div style="text-align: right; margin-top: 20px;">
-                            <span
-                                style="display: inline-block; padding: 10px 20px; background-color: #333; color: #fff; font-weight: bold; border-radius: 4px;">お問い合わせへ進む
-                                &rarr;</span>
-                        </div>
+                    style="text-decoration: none; display: flex; flex-direction: column; padding: 30px; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; transition: transform 0.2s;">
+                    <h3 class="audience-title-large" style="color: #333; margin-bottom: 15px; font-size: 1.3em;">
+                        受験生専用フォーム</h3>
+                    <p class="audience-description" style="color: #666; font-size: 0.95em; flex-grow: 1;">
+                        入試関係、オープンスクール、個別相談、学校案内資料請求など、中学・受験生およびその保護者様からのお問い合わせはこちら。</p>
+                    <div style="text-align: right; margin-top: 20px;">
+                        <span
+                            style="display: inline-block; padding: 10px 20px; background-color: #333; color: #fff; font-weight: bold; border-radius: 4px; font-size: 0.9em;">お問い合わせへ進む
+                            &rarr;</span>
                     </div>
                 </a>
 
                 <!-- Card 2 -->
                 <a href="contact_parents.html" class="audience-card-large"
-                    style="text-decoration: none; display: flex; max-width: 800px; width: 100%; transition: transform 0.2s;">
-                    <div class="card-image-wrapper" style="width: 30%;">
-                        <div class="image-placeholder" style="height: 100%;">ここに写真を入れるイメージ</div>
-                    </div>
-                    <div class="card-content-wrapper"
-                        style="width: 70%; display: flex; flex-direction: column; justify-content: center;">
-                        <h3 class="audience-title-large" style="color: #333; margin-bottom: 15px;">在校生・保護者専用フォーム</h3>
-                        <p class="audience-description" style="color: #666;">
-                            欠席連絡、学校生活についてのご相談、提出書類に関するご質問など、在校生およびその保護者様からのお問い合わせはこちら。</p>
-                        <div style="text-align: right; margin-top: 20px;">
-                            <span
-                                style="display: inline-block; padding: 10px 20px; background-color: #333; color: #fff; font-weight: bold; border-radius: 4px;">お問い合わせへ進む
-                                &rarr;</span>
-                        </div>
+                    style="text-decoration: none; display: flex; flex-direction: column; padding: 30px; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; transition: transform 0.2s;">
+                    <h3 class="audience-title-large" style="color: #333; margin-bottom: 15px; font-size: 1.3em;">
+                        在校生・保護者専用フォーム</h3>
+                    <p class="audience-description" style="color: #666; font-size: 0.95em; flex-grow: 1;">
+                        欠席連絡、学校生活についてのご相談、提出書類に関するご質問など、在校生およびその保護者様からのお問い合わせはこちら。</p>
+                    <div style="text-align: right; margin-top: 20px;">
+                        <span
+                            style="display: inline-block; padding: 10px 20px; background-color: #333; color: #fff; font-weight: bold; border-radius: 4px; font-size: 0.9em;">お問い合わせへ進む
+                            &rarr;</span>
                     </div>
                 </a>
 
                 <!-- Card 3 -->
                 <a href="contact_alumni.html" class="audience-card-large"
-                    style="text-decoration: none; display: flex; max-width: 800px; width: 100%; transition: transform 0.2s;">
-                    <div class="card-image-wrapper" style="width: 30%;">
-                        <div class="image-placeholder" style="height: 100%;">ここに写真を入れるイメージ</div>
-                    </div>
-                    <div class="card-content-wrapper"
-                        style="width: 70%; display: flex; flex-direction: column; justify-content: center;">
-                        <h3 class="audience-title-large" style="color: #333; margin-bottom: 15px;">卒業生専用フォーム（各種証明書
-                            申請管理型）</h3>
-                        <p class="audience-description" style="color: #666;">卒業証明書、成績証明書などの各種証明書の発行申請や、同窓会関係のお問い合わせはこちら。
-                        </p>
-                        <div style="text-align: right; margin-top: 20px;">
-                            <span
-                                style="display: inline-block; padding: 10px 20px; background-color: #333; color: #fff; font-weight: bold; border-radius: 4px;">申請・お問い合わせへ進む
-                                &rarr;</span>
-                        </div>
+                    style="text-decoration: none; display: flex; flex-direction: column; padding: 30px; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; transition: transform 0.2s;">
+                    <h3 class="audience-title-large" style="color: #333; margin-bottom: 15px; font-size: 1.3em;">
+                        卒業生専用フォーム<br>（各種証明書 申請管理型）</h3>
+                    <p class="audience-description" style="color: #666; font-size: 0.95em; flex-grow: 1;">
+                        卒業証明書、成績証明書などの各種証明書の発行申請や、同窓会関係のお問い合わせはこちら。</p>
+                    <div style="text-align: right; margin-top: 20px;">
+                        <span
+                            style="display: inline-block; padding: 10px 20px; background-color: #333; color: #fff; font-weight: bold; border-radius: 4px; font-size: 0.9em;">申請・お問い合わせへ進む
+                            &rarr;</span>
                     </div>
                 </a>
 
