--- a/about.html
+++ b/about.html
@@ -98,7 +98,8 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>学校紹介</h1>
-            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
+            <img src="img/facility.jpg" alt="学校紹介"
+                style="width: 100%; max-height: 400px; object-fit: cover; border-radius: 4px;">
         </div>
     </header>
 
